Refactoring, code optimization